Added some more TNG cards and 2PG missions. Wrapped getMissionForPlayer in an InvalidGameLogicException.